--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@ My research interests are centered around computer vision, specifically in image
                     <b>Efficient and Robust Video Virtual Try-On Framework via Enhanced Multi-garment Alignment</b><br>
                     <b>Zijian He</b>, Peixin Chen, Guolin Zheng, Guangrun Wang, Xiaonan Luo, Liang Lin, Guanbin Li<br>
                     <i>IEEE Transactions on Multimedia (<b>TMM</b>), 2025</i><br>
+                    <a href="scnuhealthy.github.io/VidClothEditor" target="_blank">[Project]</a>
                     <a href="" target="_blank">[Paper]</a>
-                    <a href="" target="_blank">[Arxiv]</a>
                     <a href="" target="_blank">[Code]</a>
                   </p>
                 </div>
