--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Xuanhua He</title>
+  <title>Zijian He</title>
   <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
   <link rel="shortcut icon" type="image/x-icon" href="images/misc/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
