--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ My research interests are centered around computer vision, specifically in image
                     Weizhi Zhong, Huan Yang, Zheng Liu, Huiguo He, <b>Zijian He</b>, Xuesong Niu, Di Zhang, Guanbin Li<br>
                     <i>ArXiv Preprint, 2025</i><br>
                     <a href="https://weizhi-zhong.github.io/Mod-Adapter/" target="_blank">[Project]</a>
-                    <a href="" target="_blank">[Paper]</a>
+                    <a href="https://arxiv.org/abs/2505.18612" target="_blank">[Paper]</a>
                     <a href="" target="_blank">[Code]</a>
                   </p>
                 </div>
@@ -245,7 +245,7 @@ My research interests are centered around computer vision, specifically in image
               <div class="column">
                 <div class="content">
                   <p>
-                    <b>VTON 360: High-fidelity virtual try-on from any viewing direction</b><br>
+                    <b>VTON 360: High-fidelity Virtual Try-on from any Viewing Direction</b><br>
 					<b>Zijian He</b>, Yuwei Ning, Yipeng Qin, Guangrun Wang, Sibei Yang, Liang Lin, Guanbin Li<br>
                     <i>Proceedings of the Computer Vision and Pattern Recognition Conference (<b>CVPR</b>), 2025</i><br>
                     <a href="https://scnuhealthy.github.io/VTON360/" target="_blank">[Project]</a>
@@ -285,7 +285,7 @@ My research interests are centered around computer vision, specifically in image
               <div class="column">
                 <div class="content">
                   <p>
-                    <b>Wildvidfit: Video virtual try-on in the wild via image-based controlled diffusion models</b><br>
+                    <b>Wildvidfit: Video Virtual Try-on in the Wild via Image-based Controlled Diffusion Models</b><br>
                     <b>Zijian He</b>, Peixin Chen, Guangrun Wang, Guanbin Li, Philip HS Torr, Liang Lin<br>
                     <i>European Conference on Computer Vision (<b>ECCV</b>), 2024</i><br>
                     <a href="https://wildvidfit-project.github.io/" target="_blank">[Project]</a>
@@ -306,7 +306,7 @@ My research interests are centered around computer vision, specifically in image
               <div class="column">
                 <div class="content">
                   <p>
-                    <b>Vehicle global 6-DoF pose estimation under traffic surveillance camera</b><br>
+                    <b>Vehicle Global 6-DoF Pose Estimation under Traffic Surveillance Camera</b><br>
                     Shanxin Zhang, Cheng Wang, <b>Zijian He</b>, Qing Li, Xiuhong Lin, Xin Li, Juyong Zhang, Chenhui Yang, Jonathan Li<br>
                     <i>ISPRS Journal of Photogrammetry and Remote Sensing (<b>ISPRS</b>), 2020</i><br>
                     <a href="https://d1wqtxts1xzle7.cloudfront.net/92233879/343508783-libre.pdf?1665396335=&response-content-disposition=inline%3B+filename%3DVehicle_global_6_DoF_pose_estimation_und.pdf&Expires=1755169278&Signature=CEBAcN0h7NfxOWwYV9AYba~9d7tFJf1O80Bm1U8zcolsB18vLjmJyrZbABKfluGk4D3xtdVhMMBJSX5GIh-6xNXVLReisVa-bV6CivByyj258mhVzsgZ~AiaNkuqtaY4upy~bWo0ydAXHmcY0PrVtabrh6NGi2paawR5ZPPlMm1~flENawxgDxYi20voVt5GvY3AItvyO3P8HvFiINj~DQY0fBe8zg9KumE~t-ImBMesdunsRHppF-aCaQ6WZ2oZ4IbUWKeZq3FtRGCrIGcAyYbS41TxNow2tFLl~QGrtD6AWh5qcqM5FmlG8vXGtSKK5F1SQglPazrpT5KfepAaZw__&Key-Pair-Id=APKAJLOHF5GGSLRBV4ZA" target="_blank">[Project]</a>
