--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ My research interests are centered around computer vision, specifically in image
                     <b>Zijian He</b>, Peixin Chen, Guolin Zheng, Guangrun Wang, Xiaonan Luo, Liang Lin, Guanbin Li<br>
                     <i>IEEE Transactions on Multimedia (<b>TMM</b>), 2025</i><br>
                     <a href="https://scnuhealthy.github.io/VidClothEditor/" target="_blank">[Project]</a>
-                    <a href="" target="_blank">[Paper]</a>
+                    <a href="https://ieeexplore.ieee.org/document/11175502" target="_blank">[Paper]</a>
                     <a href="" target="_blank">[Code]</a>
                   </p>
                 </div>
