Update paper title in index.html

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ My research interests are centered around computer vision, specifically in image
               <div class="column">
                 <div class="content">
                   <p>
-                    <b>One Model For All: Partial Diffusion for Unified Try-On and Try-Off in Any Pose.</b><br>
+                    <b>One Model for All: Unified Try-On and Try-Off in Any Pose via LLM-Inspired Bidirectional Tweedie Diffusion.</b><br>
                     Jinxi Liu, <b>Zijian He(Co-first Author)</b>, Guangrun Wang, Guanbin Li, Liang Lin.<br>
                     <i>ArXiv Preprint,2025</i><br>
                     <a href="https://onemodelforall.github.io/" target="_blank">[Project]</a>
